--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,4 @@ $RECYCLE.BIN/
 
 # Other files
 /ColorExplorer/ColorExplorer.Web/App_Data/version.txt
+/tools/Openchain.SqlServer.Schema/Openchain.SqlServer.Schema.jfm
