--- a/src/Openchain/Properties/launchSettings.json
+++ b/src/Openchain/Properties/launchSettings.json
@@ -17,11 +17,11 @@
     },
     "start": {
       "commandName": "Project",
-      "launchBrowser": true,
       "launchUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "http://localhost:5000"
     }
   }
 }
